deploy/manifests/beta/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: creative-studio-beta
  namespace: creative-studio-beta
spec:
  minReadySeconds: 2
  replicas: 1
  selector:
    matchLabels:
      app: creative-studio-beta
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: creative-studio-beta
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: creative-studio-secrets
        image: demo.goharbor.io/creative-studio/creative-studio@sha256:edd6f736eec4d76af23214bbb7faaa7aaf3c57f8893f3dca1a97aab31c234161
        name: creative-studio-beta
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
      imagePullSecrets:
      - name: harbor-secret
---
apiVersion: v1
kind: Service
metadata:
  name: creative-studio-beta-service
  namespace: creative-studio-beta
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 3000
  selector:
    app: creative-studio-beta
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: creative-studio-beta
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
  namespace: creative-studio-beta
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
  podSelector:
    matchLabels:
      app: creative-studio-beta
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-creative-studio-ingress
  namespace: creative-studio-beta
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 3000
      protocol: TCP
  podSelector:
    matchLabels:
      app: creative-studio-beta
  policyTypes:
  - Ingress
---
